--- a/parts/doctreeview/doctreeprojectconfigwidgetbase.ui
+++ b/parts/doctreeview/doctreeprojectconfigwidgetbase.ui
@@ -93,7 +93,7 @@
                                 <enum>WheelFocus</enum>
                             </property>
                             <property name="whatsThis" stdset="0">
-                                <string>This table shows all the globaly installed documentation. Use the enable and disable buttons to control the use of each documentation item in the current project. To add or remove documentation to this list, use Settings-&gt;Configure Gideon...-&gt;Documentation Tree</string>
+                                <string>This table shows all the globally installed documentation. Use the enable and disable buttons to control the use of each documentation item in the current project. To add or remove documentation to this list, use Settings-&gt;Configure Gideon...-&gt;Documentation Tree</string>
                             </property>
                         </widget>
                         <widget class="QLayoutWidget">
