--- a/parts/fileview/filegroupsconfigwidgetbase.ui
+++ b/parts/fileview/filegroupsconfigwidgetbase.ui
@@ -19,7 +19,6 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
-
         <widget class="QLayoutWidget">
             <property name="name">
                 <cstring>Layout3</cstring>
@@ -31,13 +30,15 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-
                 <widget class="QLabel">
                     <property name="name">
                         <cstring>title_label</cstring>
                     </property>
                     <property name="text">
-                        <string>Groups in the file view and their corresponding patterns:</string>
+                        <string>&amp;Groups in the file view and their corresponding patterns:</string>
+                    </property>
+                    <property name="buddy" stdset="0">
+                        <cstring>listview</cstring>
                     </property>
                 </widget>
                 <widget class="QListView">
@@ -103,7 +104,6 @@
                 <property name="margin">
                     <number>0</number>
                 </property>
-
                 <spacer>
                     <property name="name">
                         <cstring>Spacer6</cstring>
@@ -142,7 +142,7 @@
                         <cstring>deletegroup_button</cstring>
                     </property>
                     <property name="text">
-                        <string>&amp;Delete Group</string>
+                        <string>De&amp;lete Group</string>
                     </property>
                 </widget>
                 <spacer>
@@ -248,6 +248,9 @@
         <slot>moveDown()</slot>
     </connection>
 </connections>
+<includes>
+    <include location="global" impldecl="in implementation">kdialog.h</include>
+</includes>
 <slots>
     <slot access="protected">addGroup()</slot>
     <slot access="protected">editGroup()</slot>
@@ -255,9 +258,6 @@
     <slot access="protected">moveUp()</slot>
     <slot access="protected">moveDown()</slot>
 </slots>
-<includes>
-    <include location="global" impldecl="in implementation">kdialog.h</include>
-</includes>
 <layoutdefaults spacing="6" margin="11"/>
 <layoutfunctions spacing="KDialog::spacingHint" margin="KDialog::marginHint"/>
 </UI>
