--- a/parts/fortransupport/ftnchekconfigwidgetbase.ui
+++ b/parts/fortransupport/ftnchekconfigwidgetbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>FtnchekConfigWidgetBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -13,9 +13,8 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Ftncheck Options</string>
+        <string>Ftnchek Options</string>
     </property>
-
     <vbox>
         <property name="name">
             <cstring>unnamed</cstring>
@@ -41,13 +40,12 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QCheckBox" row="0" column="2">
                         <property name="name">
                             <cstring>extern_box</cstring>
                         </property>
                         <property name="text">
-                            <string>External subprograms without definition</string>
+                            <string>&amp;External subprograms without definition</string>
                         </property>
                     </widget>
                     <widget class="QCheckBox" row="1" column="2">
@@ -55,7 +53,7 @@
                             <cstring>division_box</cstring>
                         </property>
                         <property name="text">
-                            <string>Divisions</string>
+                            <string>&amp;Divisions</string>
                         </property>
                     </widget>
                     <widget class="QCheckBox" row="0" column="0">
@@ -63,7 +61,7 @@
                             <cstring>declare_box</cstring>
                         </property>
                         <property name="text">
-                            <string>Identifiers without explicit type</string>
+                            <string>&amp;Identifiers without explicit type</string>
                         </property>
                     </widget>
                     <widget class="QCheckBox" row="1" column="0">
@@ -71,11 +69,11 @@
                             <cstring>pure_box</cstring>
                         </property>
                         <property name="text">
-                            <string>Assume functions have no side effects</string>
+                            <string>&amp;Assume functions have no side effects</string>
                         </property>
                     </widget>
                     <spacer row="2" column="0">
-                        <property name="name" stdset="0">
+                        <property name="name">
                             <cstring>Spacer2_3</cstring>
                         </property>
                         <property name="orientation">
@@ -96,7 +94,10 @@
                             <cstring>TextLabel1</cstring>
                         </property>
                         <property name="text">
-                            <string>Arguments:</string>
+                            <string>Ar&amp;guments:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>argumentsall_button</cstring>
                         </property>
                     </widget>
                     <widget class="QRadioButton" row="4" column="0">
@@ -122,7 +123,7 @@
                         </property>
                     </widget>
                     <spacer row="6" column="1">
-                        <property name="name" stdset="0">
+                        <property name="name">
                             <cstring>Spacer4</cstring>
                         </property>
                         <property name="orientation">
@@ -139,7 +140,7 @@
                         </property>
                     </spacer>
                     <spacer row="2" column="2">
-                        <property name="name" stdset="0">
+                        <property name="name">
                             <cstring>Spacer3</cstring>
                         </property>
                         <property name="orientation">
@@ -182,7 +183,18 @@
                             <property name="clickable">
                                 <bool>true</bool>
                             </property>
-                            <property name="resizeable">
+                            <property name="resizable">
+                                <bool>true</bool>
+                            </property>
+                        </column>
+                        <column>
+                            <property name="text">
+                                <string></string>
+                            </property>
+                            <property name="clickable">
+                                <bool>true</bool>
+                            </property>
+                            <property name="resizable">
                                 <bool>true</bool>
                             </property>
                         </column>
@@ -190,7 +202,7 @@
                             <cstring>arguments_listview</cstring>
                         </property>
                         <property name="resizeMode">
-                            <enum>LastColumn</enum>
+                            <enum>NoColumn</enum>
                         </property>
                     </widget>
                     <widget class="QListView" row="6" column="2">
@@ -201,7 +213,18 @@
                             <property name="clickable">
                                 <bool>true</bool>
                             </property>
-                            <property name="resizeable">
+                            <property name="resizable">
+                                <bool>true</bool>
+                            </property>
+                        </column>
+                        <column>
+                            <property name="text">
+                                <string></string>
+                            </property>
+                            <property name="clickable">
+                                <bool>true</bool>
+                            </property>
+                            <property name="resizable">
                                 <bool>true</bool>
                             </property>
                         </column>
@@ -209,7 +232,7 @@
                             <cstring>common_listview</cstring>
                         </property>
                         <property name="resizeMode">
-                            <enum>LastColumn</enum>
+                            <enum>NoColumn</enum>
                         </property>
                     </widget>
                     <widget class="QLabel" row="3" column="2">
@@ -217,7 +240,10 @@
                             <cstring>TextLabel2</cstring>
                         </property>
                         <property name="text">
-                            <string>Common blocks:</string>
+                            <string>Common &amp;blocks:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>commonall_button</cstring>
                         </property>
                     </widget>
                 </grid>
@@ -233,7 +259,6 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QRadioButton" row="2" column="0">
                         <property name="name">
                             <cstring>truncationonly_button</cstring>
@@ -250,7 +275,10 @@
                             <cstring>TextLabel4</cstring>
                         </property>
                         <property name="text">
-                            <string>Truncation and roundoff errors:</string>
+                            <string>&amp;Truncation and roundoff errors:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>truncationall_button</cstring>
                         </property>
                     </widget>
                     <widget class="QRadioButton" row="1" column="0">
@@ -266,7 +294,10 @@
                             <cstring>TextLabel3</cstring>
                         </property>
                         <property name="text">
-                            <string>Use of variables:</string>
+                            <string>&amp;Use of variables:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>usageall_button</cstring>
                         </property>
                     </widget>
                     <widget class="QRadioButton" row="1" column="2">
@@ -285,7 +316,18 @@
                             <property name="clickable">
                                 <bool>true</bool>
                             </property>
-                            <property name="resizeable">
+                            <property name="resizable">
+                                <bool>true</bool>
+                            </property>
+                        </column>
+                        <column>
+                            <property name="text">
+                                <string></string>
+                            </property>
+                            <property name="clickable">
+                                <bool>true</bool>
+                            </property>
+                            <property name="resizable">
                                 <bool>true</bool>
                             </property>
                         </column>
@@ -293,7 +335,7 @@
                             <cstring>truncation_listview</cstring>
                         </property>
                         <property name="resizeMode">
-                            <enum>LastColumn</enum>
+                            <enum>NoColumn</enum>
                         </property>
                     </widget>
                     <widget class="QRadioButton" row="2" column="2">
@@ -308,7 +350,7 @@
                         </property>
                     </widget>
                     <spacer row="3" column="1">
-                        <property name="name" stdset="0">
+                        <property name="name">
                             <cstring>Spacer1_2</cstring>
                         </property>
                         <property name="orientation">
@@ -332,7 +374,18 @@
                             <property name="clickable">
                                 <bool>true</bool>
                             </property>
-                            <property name="resizeable">
+                            <property name="resizable">
+                                <bool>true</bool>
+                            </property>
+                        </column>
+                        <column>
+                            <property name="text">
+                                <string></string>
+                            </property>
+                            <property name="clickable">
+                                <bool>true</bool>
+                            </property>
+                            <property name="resizable">
                                 <bool>true</bool>
                             </property>
                         </column>
@@ -340,7 +393,7 @@
                             <cstring>usage_listview</cstring>
                         </property>
                         <property name="resizeMode">
-                            <enum>LastColumn</enum>
+                            <enum>NoColumn</enum>
                         </property>
                     </widget>
                 </grid>
@@ -356,7 +409,6 @@
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-
                     <widget class="QRadioButton" row="1" column="0" rowspan="1" colspan="2">
                         <property name="name">
                             <cstring>f77all_button</cstring>
@@ -384,7 +436,18 @@
                             <property name="clickable">
                                 <bool>true</bool>
                             </property>
-                            <property name="resizeable">
+                            <property name="resizable">
+                                <bool>true</bool>
+                            </property>
+                        </column>
+                        <column>
+                            <property name="text">
+                                <string></string>
+                            </property>
+                            <property name="clickable">
+                                <bool>true</bool>
+                            </property>
+                            <property name="resizable">
                                 <bool>true</bool>
                             </property>
                         </column>
@@ -392,7 +455,7 @@
                             <cstring>f77_listview</cstring>
                         </property>
                         <property name="resizeMode">
-                            <enum>LastColumn</enum>
+                            <enum>NoColumn</enum>
                         </property>
                     </widget>
                     <widget class="QListView" row="3" column="2">
@@ -403,7 +466,18 @@
                             <property name="clickable">
                                 <bool>true</bool>
                             </property>
-                            <property name="resizeable">
+                            <property name="resizable">
+                                <bool>true</bool>
+                            </property>
+                        </column>
+                        <column>
+                            <property name="text">
+                                <string></string>
+                            </property>
+                            <property name="clickable">
+                                <bool>true</bool>
+                            </property>
+                            <property name="resizable">
                                 <bool>true</bool>
                             </property>
                         </column>
@@ -411,11 +485,11 @@
                             <cstring>portability_listview</cstring>
                         </property>
                         <property name="resizeMode">
-                            <enum>LastColumn</enum>
+                            <enum>NoColumn</enum>
                         </property>
                     </widget>
                     <spacer row="3" column="1">
-                        <property name="name" stdset="0">
+                        <property name="name">
                             <cstring>Spacer2</cstring>
                         </property>
                         <property name="orientation">
@@ -436,7 +510,10 @@
                             <cstring>TextLabel4_2</cstring>
                         </property>
                         <property name="text">
-                            <string>Fortran 77 language extensions:</string>
+                            <string>Fortran 77 language &amp;extensions:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>f77all_button</cstring>
                         </property>
                     </widget>
                     <widget class="QLabel" row="0" column="2">
@@ -444,7 +521,10 @@
                             <cstring>TextLabel3_2</cstring>
                         </property>
                         <property name="text">
-                            <string>Other portability warnings:</string>
+                            <string>Other &amp;portability warnings:</string>
+                        </property>
+                        <property name="buddy" stdset="0">
+                            <cstring>portabilityall_button</cstring>
                         </property>
                     </widget>
                     <widget class="QRadioButton" row="1" column="2">
@@ -471,6 +551,31 @@
         </widget>
     </vbox>
 </widget>
+<tabstops>
+    <tabstop>declare_box</tabstop>
+    <tabstop>pure_box</tabstop>
+    <tabstop>extern_box</tabstop>
+    <tabstop>division_box</tabstop>
+    <tabstop>argumentsall_button</tabstop>
+    <tabstop>argumentsonly_button</tabstop>
+    <tabstop>arguments_listview</tabstop>
+    <tabstop>commonall_button</tabstop>
+    <tabstop>commononly_button</tabstop>
+    <tabstop>common_listview</tabstop>
+    <tabstop>TabWidget4</tabstop>
+    <tabstop>truncationall_button</tabstop>
+    <tabstop>truncationonly_button</tabstop>
+    <tabstop>truncation_listview</tabstop>
+    <tabstop>usageall_button</tabstop>
+    <tabstop>usageonly_button</tabstop>
+    <tabstop>usage_listview</tabstop>
+    <tabstop>f77all_button</tabstop>
+    <tabstop>f77only_button</tabstop>
+    <tabstop>f77_listview</tabstop>
+    <tabstop>portabilityall_button</tabstop>
+    <tabstop>portabilityonly_button</tabstop>
+    <tabstop>portability_listview</tabstop>
+</tabstops>
 <includes>
     <include location="global" impldecl="in implementation">kdialog.h</include>
 </includes>
